yaml, json, config files

--- a/practical_python_master/files_folders.ipynb
+++ b/practical_python_master/files_folders.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -368,11 +368,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|--.\n",
+      "| |--./.ipynb_checkpoints\n",
+      "| | |--files_folders-checkpoint.ipynb\n",
+      "| | |--external_applications-checkpoint.ipynb\n",
+      "| | |--warmup-checkpoint.ipynb\n",
+      "| |--warmup.ipynb\n",
+      "| |--tasks.py\n",
+      "| |--outline.org\n",
+      "| |--tasks.py~\n",
+      "| |--c.conf\n",
+      "| |--person.yaml\n",
+      "| |--echo.py\n",
+      "| |--training.py~\n",
+      "| |--hello.py\n",
+      "| |--files_folders.ipynb\n",
+      "| |--fabfile.py\n",
+      "| |--external_applications.ipynb\n",
+      "| |--debug.py~\n",
+      "| |--fabfile.py~\n",
+      "| |--debug.py\n",
+      "| |--training.py\n",
+      "| |--x.conf\n",
+      "| |--fab.py~\n"
+     ]
+    }
+   ],
    "source": [
     "dirtree(\".\")"
    ]
@@ -417,7 +445,7 @@
    "metadata": {},
    "source": [
     "** problem **\n",
-    "- Write a function to compute size of a directory. This should consider size of all the files inside that directory.\n",
+    "- Write a function to compute size of a directory. This should consider recursively size of all the files inside that directory.\n",
     "- Write a function to find all \".log\" files from given directory"
    ]
   },
@@ -450,68 +478,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "os.path.getmtime(\"files_folders.ipynb\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "time.ctime(os.path.getmtime(\"files_folders.ipynb\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['/var/log/alternatives.log',\n",
+       "['/var/log/auth.log',\n",
        " '/var/log/gpu-manager.log',\n",
-       " '/var/log/fontconfig.log',\n",
-       " '/var/log/repowerd.log',\n",
-       " '/var/log/dpkg.log',\n",
-       " '/var/log/apport.log',\n",
+       " '/var/log/Xorg.1.log',\n",
        " '/var/log/kern.log',\n",
-       " '/var/log/auth.log',\n",
        " '/var/log/boot.log',\n",
-       " '/var/log/bootstrap.log',\n",
+       " '/var/log/alternatives.log',\n",
+       " '/var/log/Xorg.2.log',\n",
+       " '/var/log/dpkg.log',\n",
        " '/var/log/Xorg.0.log',\n",
-       " '/var/log/installer/casper.log',\n",
-       " '/var/log/apt/history.log',\n",
+       " '/var/log/fontconfig.log',\n",
+       " '/var/log/bootstrap.log',\n",
+       " '/var/log/mintsystem.log',\n",
        " '/var/log/apt/term.log',\n",
+       " '/var/log/apt/history.log',\n",
        " '/var/log/lightdm/x-0.log',\n",
+       " '/var/log/lightdm/x-2.log',\n",
        " '/var/log/lightdm/seat0-greeter.log',\n",
+       " '/var/log/lightdm/x-1.log',\n",
        " '/var/log/lightdm/lightdm.log',\n",
-       " '/var/log/unattended-upgrades/unattended-upgrades.log',\n",
-       " '/var/log/unattended-upgrades/unattended-upgrades-shutdown.log',\n",
-       " '/var/log/unattended-upgrades/unattended-upgrades-dpkg.log']"
+       " '/var/log/installer/casper.log']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,6 +518,156 @@
     "            if f.endswith(\".\"+ext):\n",
     "                yield os.path.join(path, f)\n",
     "list(find(\"/var/log\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Watching files for modifications ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1537799455.9950037"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.getmtime(\"files_folders.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Mon Sep 24 20:00:55 2018'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time.ctime(os.path.getmtime(\"files_folders.ipynb\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** problem **\n",
+    "- Write a function to find files modified within given timeframe in seconds _*hint: use time.time() to get current time.*_\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "def modifiedwithin(dirpath, seconds):\n",
+    "    now = time.time()\n",
+    "    for path, dirs, files in os.walk(dirpath):\n",
+    "        for f in files:\n",
+    "            filepath = os.path.join(path, f)\n",
+    "            t = os.path.getmtime(filepath)\n",
+    "            if (now - t) <= seconds:\n",
+    "                yield filepath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./outline.org', './files_folders.ipynb']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(modifiedwithin(\".\", 100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "def modifiedwithin_(files, seconds):\n",
+    "    now = time.time()\n",
+    "    for f in files:\n",
+    "        t = os.path.getmtime(f)\n",
+    "        if (now - t) <= seconds:\n",
+    "            yield f"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "find all log files in /var/log, modified in last 1000 seconds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/var/log/auth.log', '/var/log/kern.log']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logfiles = find(\"/var/log/\",\"log\")\n",
+    "list(modifiedwithin_(logfiles, 1000))"
    ]
   },
   {
@@ -623,7 +768,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import stat\n",
@@ -818,6 +965,308 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "###  Working various file formats ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "person = {\"name\":\"vmware\",\"email\":\"person@vmware.com\", \"teams\":[\"infra\",\"cloud\",\"HR\"],\"d\":(1,2,3)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"person.yaml\",\"w\") as f:\n",
+    "    f.write(yaml.dump(person))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d: !!python/tuple [1, 2, 3]\r\n",
+      "email: person@vmware.com\r\n",
+      "name: vmware\r\n",
+      "teams: [infra, cloud, HR]\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat person.yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'d': (1, 2, 3), 'email': 'person@vmware.com', 'name': 'vmware', 'teams': ['infra', 'cloud', 'HR']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"person.yaml\") as f:\n",
+    "    p = yaml.load(f)\n",
+    "    print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp = json.dumps(person)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"name\": \"vmware\", \"email\": \"person@vmware.com\", \"teams\": [\"infra\", \"cloud\", \"HR\"], \"d\": [1, 2, 3]}'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'d': [1, 2, 3],\n",
+       " 'email': 'person@vmware.com',\n",
+       " 'name': 'vmware',\n",
+       " 'teams': ['infra', 'cloud', 'HR']}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.loads(sp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import configparser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting x.conf\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file x.conf\n",
+    "[section1]\n",
+    "a = 2\n",
+    "b = hello\n",
+    "c = 1.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf = configparser.ConfigParser()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['x.conf']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conf.read(\"x.conf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['section1']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conf.sections()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "section = conf['section1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('a', '2')\n",
+      "('b', 'hello')\n",
+      "('c', '1.2')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in section.items():\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "c= configparser.ConfigParser()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "c['header1'] = {\"x\":1,\"y\":2}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.write(open(\"c.conf\", \"w\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[header1]\r\n",
+      "x = 1\r\n",
+      "y = 2\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat c.conf"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -843,7 +1292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
