added one more slide for geometric iterations

--- a/foundation/Adventures In Iterations.ipynb
+++ b/foundation/Adventures In Iterations.ipynb
@@ -1707,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -1716,15 +1716,17 @@
     "import turtle \n",
     "def drawtriangle(x, y, size):\n",
     "    \"\"\"\n",
-    "    Function to draw right angle triangle with its two sides \n",
-    "    of length, size\n",
+    "    Function to draw isoceles right angle triangle \n",
+    "    with its two sides of length, size\n",
     "    \"\"\"\n",
     "    turtle.up()\n",
     "    turtle.setpos(x,y)\n",
+    "    #turtle.begin_fill()\n",
     "    turtle.down()\n",
     "    turtle.goto(x+size, y)\n",
     "    turtle.goto(x, y-size)\n",
     "    turtle.goto(x,y)\n",
+    "    #turtle.end_fill()\n",
     "    turtle.up()"
    ]
   },
@@ -1737,9 +1739,9 @@
    "outputs": [],
    "source": [
     "\n",
-    "def sierpinski(x=0,y=0,size=256):\n",
+    "def sierpinski(x=0,y=0,size=256, minsize=16):\n",
     "    \n",
-    "    if size<16:\n",
+    "    if size<minsize:\n",
     "        drawtriangle(x,y,size)\n",
     "    else:\n",
     "        size = size/2\n",
@@ -1757,10 +1759,8 @@
    "outputs": [],
    "source": [
     "turtle.color('red', 'yellow')\n",
-    "#turtle.begin_fill()\n",
     "turtle.up()\n",
     "sierpinski()\n",
-    "#turtle.end_fill()\n",
     "turtle.done()"
    ]
   },
