added one more page for geometric iterations

--- a/foundation/Adventures In Iterations.ipynb
+++ b/foundation/Adventures In Iterations.ipynb
@@ -1707,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -1741,7 +1741,7 @@
     "\n",
     "def sierpinski(x=0,y=0,size=256, minsize=16):\n",
     "    \n",
-    "    if size<minsize:\n",
+    "    if size<=minsize:\n",
     "        drawtriangle(x,y,size)\n",
     "    else:\n",
     "        size = size/2\n",
@@ -1753,9 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "turtle.color('red', 'yellow')\n",
