--- a/online_course/source/module3/day3.ipynb
+++ b/online_course/source/module3/day3.ipynb
@@ -404,11 +404,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Authentication\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "user = \"vikipedia\"\n",
+    "pass_ = open(\"/tmp/pass.txt\").read().strip()\n",
+    "resp = requests.get(\"http://api.github.com/user\", auth=(\"vikipedia\", pass_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'login': 'vikipedia',\n",
+       " 'id': 30557,\n",
+       " 'node_id': 'MDQ6VXNlcjMwNTU3',\n",
+       " 'avatar_url': 'https://avatars3.githubusercontent.com/u/30557?v=4',\n",
+       " 'gravatar_id': '',\n",
+       " 'url': 'https://api.github.com/users/vikipedia',\n",
+       " 'html_url': 'https://github.com/vikipedia',\n",
+       " 'followers_url': 'https://api.github.com/users/vikipedia/followers',\n",
+       " 'following_url': 'https://api.github.com/users/vikipedia/following{/other_user}',\n",
+       " 'gists_url': 'https://api.github.com/users/vikipedia/gists{/gist_id}',\n",
+       " 'starred_url': 'https://api.github.com/users/vikipedia/starred{/owner}{/repo}',\n",
+       " 'subscriptions_url': 'https://api.github.com/users/vikipedia/subscriptions',\n",
+       " 'organizations_url': 'https://api.github.com/users/vikipedia/orgs',\n",
+       " 'repos_url': 'https://api.github.com/users/vikipedia/repos',\n",
+       " 'events_url': 'https://api.github.com/users/vikipedia/events{/privacy}',\n",
+       " 'received_events_url': 'https://api.github.com/users/vikipedia/received_events',\n",
+       " 'type': 'User',\n",
+       " 'site_admin': False,\n",
+       " 'name': 'vikrant',\n",
+       " 'company': None,\n",
+       " 'blog': '',\n",
+       " 'location': 'kudawale, dapoli, pune',\n",
+       " 'email': 'vikrant.patil@gmail.com',\n",
+       " 'hireable': None,\n",
+       " 'bio': None,\n",
+       " 'twitter_username': None,\n",
+       " 'public_repos': 7,\n",
+       " 'public_gists': 0,\n",
+       " 'followers': 9,\n",
+       " 'following': 0,\n",
+       " 'created_at': '2008-10-23T08:54:39Z',\n",
+       " 'updated_at': '2020-09-16T08:25:20Z',\n",
+       " 'private_gists': 0,\n",
+       " 'total_private_repos': 1,\n",
+       " 'owned_private_repos': 1,\n",
+       " 'disk_usage': 7840,\n",
+       " 'collaborators': 0,\n",
+       " 'two_factor_authentication': False,\n",
+       " 'plan': {'name': 'free',\n",
+       "  'space': 976562499,\n",
+       "  'collaborators': 0,\n",
+       "  'private_repos': 10000}}"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resp.json()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -656,6 +728,13 @@
     "    print(item.findtext(\"link\"))\n",
     "    print(\"-\"*30)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
