--- a/online_course/source/module3/day3.ipynb
+++ b/online_course/source/module3/day3.ipynb
@@ -730,11 +730,176 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data from NSE"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://www1.nseindia.com/live_market/dynaContent/live_watch/get_quote/GetQuote.jsp\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {'Accept': '*/*',\n",
+    " 'Accept-Language': 'en-US,en;q=0.5',\n",
+    " 'Host': 'www1.nseindia.com',\n",
+    " 'User-Agent': 'Mozilla/5.0 (Windows NT 6.1; WOW64; rv:28.0) Gecko/20100101 Firefox/28.0',\n",
+    " 'X-Requested-With': 'XMLHttpRequest'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_params(code):\n",
+    "    return dict([('symbol', code), ('illiquid', '0'), ('smeFlag', '0'), ('itpFlag', '0')])\n",
+    "\n",
+    "resp = requests.get(url, headers=headers, params=get_params(\"infy\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resp = requests.get(\"https://www.nseindia.com/get-quotes/equity\", params={\"symbol\":\"INFRATEL\"}, headers=headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import bs4\n",
+    "\n",
+    "soup = bs4.BeautifulSoup(resp.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'tradedDate': '16SEP2020',\n",
+       " 'data': [{'pricebandupper': '1,080.65',\n",
+       "   'symbol': 'INFY',\n",
+       "   'applicableMargin': '18.63',\n",
+       "   'bcEndDate': '-',\n",
+       "   'totalSellQuantity': '-',\n",
+       "   'adhocMargin': '-',\n",
+       "   'companyName': 'Infosys Limited',\n",
+       "   'marketType': 'N',\n",
+       "   'exDate': '29-MAY-20',\n",
+       "   'bcStartDate': '-',\n",
+       "   'css_status_desc': 'Listed',\n",
+       "   'dayHigh': '1,005.65',\n",
+       "   'basePrice': '982.45',\n",
+       "   'securityVar': '15.13',\n",
+       "   'pricebandlower': '884.25',\n",
+       "   'sellQuantity5': '-',\n",
+       "   'sellQuantity4': '-',\n",
+       "   'sellQuantity3': '-',\n",
+       "   'cm_adj_high_dt': '16-SEP-20',\n",
+       "   'sellQuantity2': '-',\n",
+       "   'dayLow': '982.00',\n",
+       "   'sellQuantity1': '-',\n",
+       "   'quantityTraded': '1,00,59,392',\n",
+       "   'pChange': '1.97',\n",
+       "   'totalTradedValue': '99,733.84',\n",
+       "   'deliveryToTradedQuantity': '40.80',\n",
+       "   'totalBuyQuantity': '63',\n",
+       "   'averagePrice': '991.45',\n",
+       "   'indexVar': '-',\n",
+       "   'cm_ffm': '3,66,924.27',\n",
+       "   'purpose': 'DIVIDEND - RS 9.50 PER SHARE',\n",
+       "   'buyPrice2': '-',\n",
+       "   'secDate': '16-Sep-2020 00:00:00',\n",
+       "   'buyPrice1': '1,001.75',\n",
+       "   'high52': '1,005.65',\n",
+       "   'previousClose': '982.45',\n",
+       "   'ndEndDate': '-',\n",
+       "   'low52': '509.25',\n",
+       "   'buyPrice4': '-',\n",
+       "   'buyPrice3': '-',\n",
+       "   'recordDate': '01-JUN-20',\n",
+       "   'deliveryQuantity': '41,03,847',\n",
+       "   'buyPrice5': '-',\n",
+       "   'priceBand': 'No Band',\n",
+       "   'extremeLossMargin': '3.50',\n",
+       "   'cm_adj_low_dt': '19-MAR-20',\n",
+       "   'varMargin': '15.13',\n",
+       "   'sellPrice1': '-',\n",
+       "   'sellPrice2': '-',\n",
+       "   'totalTradedVolume': '1,00,59,392',\n",
+       "   'sellPrice3': '-',\n",
+       "   'sellPrice4': '-',\n",
+       "   'sellPrice5': '-',\n",
+       "   'change': '19.35',\n",
+       "   'surv_indicator': '-',\n",
+       "   'ndStartDate': '-',\n",
+       "   'buyQuantity4': '-',\n",
+       "   'isExDateFlag': False,\n",
+       "   'buyQuantity3': '-',\n",
+       "   'buyQuantity2': '-',\n",
+       "   'buyQuantity1': '63',\n",
+       "   'series': 'EQ',\n",
+       "   'faceValue': '5.00',\n",
+       "   'buyQuantity5': '-',\n",
+       "   'closePrice': '0.00',\n",
+       "   'open': '986.00',\n",
+       "   'isinCode': 'INE009A01021',\n",
+       "   'lastPrice': '1,001.80'}],\n",
+       " 'optLink': '/marketinfo/sym_map/symbolMapping.jsp?symbol=INFY&instrument=-&date=-&segmentLink=17&symbolCount=2',\n",
+       " 'otherSeries': ['EQ'],\n",
+       " 'futLink': '/live_market/dynaContent/live_watch/get_quote/GetQuoteFO.jsp?underlying=INFY&instrument=FUTSTK&expiry=24SEP2020&type=-&strike=-',\n",
+       " 'lastUpdateTime': '16-SEP-2020 16:00:00'}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "json.loads(soup.findAll(attrs={'id':\"responseDiv\"})[0].text.strip())"
+   ]
   },
   {
    "cell_type": "code",
