--- a/online_course/source/module3/day4.ipynb
+++ b/online_course/source/module3/day4.ipynb
@@ -40,14 +40,16 @@
     "app = typer.Typer()\n",
     "\n",
     "@app.command()\n",
-    "def print_emails(folderindex:int=6, emailcount:int=10): # with this you can change \n",
-    "                                                        # folders,and emailcount, \n",
+    "def print_emails(folderindex:int=6, emailcount:int=3): # with this you can change \n",
+    "    \"\"\"\n",
+    "    folderindex 3, 4, 5, 6 ..Trash, Outbox, Sent, Inbox \n",
+    "    \"\"\"                                                    # folders,and emailcount, \n",
     "                                                        # try different numbers\n",
     "    outlook = win32com.client.Dispatch(\"Outlook.Application\").GetNamespace(\"MAPI\")\n",
     "    inbox = outlook.GetDefaultFolder(folderindex)\n",
     "    messages = inbox.Items\n",
     "    for i in range(emailcount):\n",
-    "        message = next(messages)\n",
+    "        message = messages[i]\n",
     "        print(message.Subject)\n",
     "        print(message.Body)\n",
     "        print(\"=\"*30)\n",
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,39 +119,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores. [generic.py:2602]\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Table 'wallet' already exists.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-62-404f86b02bf2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_sql\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"wallet\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcon\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/trainings/trainingvenv/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36mto_sql\u001b[0;34m(self, name, con, schema, if_exists, index, index_label, chunksize, dtype, method)\u001b[0m\n\u001b[1;32m   2600\u001b[0m         \u001b[0;32mfrom\u001b[0m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mio\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msql\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2601\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2602\u001b[0;31m         sql.to_sql(\n\u001b[0m\u001b[1;32m   2603\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2604\u001b[0m             \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/trainings/trainingvenv/lib/python3.8/site-packages/pandas/io/sql.py\u001b[0m in \u001b[0;36mto_sql\u001b[0;34m(frame, name, con, schema, if_exists, index, index_label, chunksize, dtype, method)\u001b[0m\n\u001b[1;32m    587\u001b[0m         )\n\u001b[1;32m    588\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 589\u001b[0;31m     pandas_sql.to_sql(\n\u001b[0m\u001b[1;32m    590\u001b[0m         \u001b[0mframe\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    591\u001b[0m         \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/trainings/trainingvenv/lib/python3.8/site-packages/pandas/io/sql.py\u001b[0m in \u001b[0;36mto_sql\u001b[0;34m(self, frame, name, if_exists, index, index_label, schema, chunksize, dtype, method)\u001b[0m\n\u001b[1;32m   1825\u001b[0m             \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1826\u001b[0m         )\n\u001b[0;32m-> 1827\u001b[0;31m         \u001b[0mtable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1828\u001b[0m         \u001b[0mtable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchunksize\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1829\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/trainings/trainingvenv/lib/python3.8/site-packages/pandas/io/sql.py\u001b[0m in \u001b[0;36mcreate\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    721\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    722\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mif_exists\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"fail\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 723\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Table '{self.name}' already exists.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    724\u001b[0m             \u001b[0;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mif_exists\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"replace\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    725\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpd_sql\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop_table\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mschema\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Table 'wallet' already exists."
+      "/home/vikrant/trainings/trainingvenv/lib/python3.8/site-packages/pandas/core/generic.py:2602: UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
+      "  sql.to_sql(\n"
      ]
     }
    ],
    "source": [
-    "df.to_sql(\"wallet\", con=conn)"
+    "df.to_sql(\"wallet\", con=conn, if_exists=\"append\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,13 +146,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(0, 0, '2020-12-22 07:15:07.815379', 'Utility', 'Electricity', 418.33547752172433)\n",
+      "(1, 1, '2021-08-28 15:15:07.815379', 'Travel', 'Auto', 301.3777497294401)\n",
+      "(2, 2, '2021-04-01 17:15:07.815379', 'Books', 'Flipcart', 176.6455631641013)\n",
+      "(3, 3, '2021-02-25 16:15:07.815379', 'Travel', 'Auto', 157.07182841795515)\n",
+      "(4, 4, '2021-03-05 09:15:07.815379', 'Utility', 'Phone', 107.68343696792937)\n",
+      "(5, 5, '2021-07-29 12:15:07.815379', 'Travel', 'Metro', 339.4906184538765)\n",
+      "(6, 6, '2021-02-03 08:15:07.815379', 'Travel', 'Taxi', 348.4929726117772)\n",
+      "(7, 7, '2021-02-10 15:15:07.815379', 'Food', 'Zomato', 495.45992817979516)\n",
+      "(8, 8, '2021-01-23 13:15:07.815379', 'Music', 'Amazon', 443.53640829192335)\n",
+      "(9, 9, '2021-02-15 08:15:07.815379', 'Food', 'Zomato', 315.50928061465976)\n",
+      "(10, 10, '2021-02-11 14:15:07.815379', 'Travel', 'Metro', 345.89996036923293)\n",
+      "(11, 11, '2020-10-15 08:15:07.815379', 'Food', 'Swiggy', 427.9949700780329)\n",
+      "(12, 12, '2021-01-29 11:15:07.815379', 'Utility', 'Phone', 308.71135498523984)\n",
+      "(13, 13, '2021-05-30 09:15:07.815379', 'Books', 'Amazon', 153.80283499592448)\n",
+      "(14, 14, '2021-06-12 12:15:07.815379', 'Music', 'spotify', 295.95535498165725)\n",
+      "(15, 15, '2021-02-07 13:15:07.815379', 'Travel', 'Auto', 390.6120017299408)\n",
+      "(16, 16, '2021-06-10 12:15:07.815379', 'Music', 'Netflix', 304.2118311911406)\n",
+      "(17, 17, '2021-02-05 07:15:07.815379', 'Travel', 'Taxi', 361.62094096602567)\n",
+      "(18, 18, '2020-10-22 15:15:07.815379', 'Food', 'Swiggy', 447.4365389177168)\n",
+      "(19, 19, '2020-11-20 11:15:07.815379', 'Food', 'Swiggy', 264.8653450400193)\n",
+      "(20, 20, '2021-01-18 08:15:07.815379', 'Travel', 'Taxi', 163.8499257229653)\n",
+      "(21, 21, '2021-05-26 09:15:07.815379', 'Books', 'Flipcart', 124.37875915215405)\n",
+      "(22, 22, '2020-10-07 15:15:07.815379', 'Utility', 'Electricity', 448.61760401091914)\n",
+      "(23, 23, '2021-08-11 11:15:07.815379', 'Food', 'Hotel', 115.63502792106505)\n",
+      "(24, 24, '2021-02-01 16:15:07.815379', 'Music', 'Netflix', 127.00735257654728)\n",
+      "(25, 25, '2021-03-18 09:15:07.815379', 'Books', 'Amazon', 410.88379060061874)\n",
+      "(26, 26, '2021-05-28 11:15:07.815379', 'Books', 'Amazon Kindle', 225.38984520602628)\n",
+      "(27, 27, '2021-04-28 10:15:07.815379', 'Music', 'spotify', 100.69407930069981)\n",
+      "(28, 28, '2021-08-25 09:15:07.815379', 'Travel', 'Taxi', 365.7390292317421)\n",
+      "(29, 29, '2021-09-08 15:15:07.815379', 'Food', 'Swiggy', 477.42738301197767)\n",
+      "(30, 30, '2021-01-01 17:15:07.815379', 'Food', 'Zomato', 112.64443770713041)\n",
+      "(31, 31, '2021-08-30 10:15:07.815379', 'Travel', 'Metro', 338.3506457426912)\n",
+      "(32, 32, '2021-03-07 08:15:07.815379', 'Travel', 'Taxi', 467.22505110340586)\n",
+      "(33, 33, '2020-12-22 17:15:07.815379', 'Music', 'spotify', 479.43609337470497)\n",
+      "(34, 34, '2021-07-24 09:15:07.815379', 'Food', 'Swiggy', 211.0299924974166)\n",
+      "(35, 35, '2021-01-16 07:15:07.815379', 'Travel', 'Taxi', 354.5168912102425)\n",
+      "(36, 36, '2021-07-27 14:15:07.815379', 'Travel', 'Metro', 434.1058960264933)\n",
+      "(37, 37, '2021-08-12 10:15:07.815379', 'Food', 'Swiggy', 229.54874118750448)\n",
+      "(38, 38, '2021-07-25 08:15:07.815379', 'Food', 'Swiggy', 369.85192572939593)\n",
+      "(39, 39, '2021-01-14 12:15:07.815379', 'Music', 'Amazon', 243.64743248564815)\n",
+      "(40, 40, '2021-07-01 07:15:07.815379', 'Music', 'Netflix', 429.157774888694)\n",
+      "(41, 41, '2021-04-05 14:15:07.815379', 'Food', 'Zomato', 132.02891156372027)\n",
+      "(42, 42, '2021-02-07 13:15:07.815379', 'Books', 'Flipcart', 204.2068785907569)\n",
+      "(43, 43, '2020-11-17 08:15:07.815379', 'Food', 'Hotel', 264.31609250836965)\n",
+      "(44, 44, '2020-12-26 15:15:07.815379', 'Music', 'Amazon', 135.76771299310093)\n",
+      "(45, 45, '2021-05-03 08:15:07.815379', 'Utility', 'Phone', 439.0713008628417)\n",
+      "(46, 46, '2021-03-03 17:15:07.815379', 'Books', 'Amazon', 250.4081973171163)\n",
+      "(47, 47, '2021-06-10 09:15:07.815379', 'Books', 'Amazon Kindle', 438.5552776315245)\n",
+      "(48, 48, '2021-02-22 14:15:07.815379', 'Travel', 'Metro', 211.18254910833645)\n",
+      "(49, 49, '2021-06-12 13:15:07.815379', 'Utility', 'Electricity', 148.24880160403646)\n",
+      "(50, 50, '2020-10-08 11:15:07.815379', 'Utility', 'Phone', 163.55563419924985)\n",
+      "(51, 51, '2021-01-20 12:15:07.815379', 'Food', 'Swiggy', 309.58723368544395)\n",
+      "(52, 52, '2020-10-17 15:15:07.815379', 'Music', 'spotify', 454.12125413790864)\n",
+      "(53, 53, '2021-05-15 16:15:07.815379', 'Food', 'Hotel', 362.26486122947614)\n",
+      "(54, 54, '2021-07-19 13:15:07.815379', 'Travel', 'Metro', 127.31799507204599)\n",
+      "(55, 55, '2021-07-01 16:15:07.815379', 'Utility', 'Electricity', 160.39727446149246)\n",
+      "(56, 56, '2021-01-06 12:15:07.815379', 'Books', 'Amazon Kindle', 459.6428667290655)\n",
+      "(57, 57, '2021-05-10 11:15:07.815379', 'Music', 'spotify', 399.1312865363829)\n",
+      "(58, 58, '2020-09-23 11:15:07.815379', 'Music', 'Netflix', 211.40800191123608)\n",
+      "(59, 59, '2020-11-01 09:15:07.815379', 'Books', 'Amazon Kindle', 409.49565458666495)\n",
+      "(60, 60, '2021-04-05 07:15:07.815379', 'Utility', 'Electricity', 118.15547598859476)\n",
+      "(61, 61, '2021-01-10 09:15:07.815379', 'Food', 'Swiggy', 182.63688719152626)\n",
+      "(62, 62, '2021-08-26 11:15:07.815379', 'Utility', 'Electricity', 191.44268709224326)\n",
+      "(63, 63, '2021-08-18 15:15:07.815379', 'Music', 'Amazon', 157.3405046468871)\n",
+      "(64, 64, '2020-12-19 14:15:07.815379', 'Music', 'Amazon', 196.30725905139167)\n",
+      "(65, 65, '2021-02-11 08:15:07.815379', 'Travel', 'Auto', 433.966000008112)\n",
+      "(66, 66, '2020-12-29 15:15:07.815379', 'Music', 'Netflix', 466.75629847721046)\n",
+      "(67, 67, '2021-02-17 11:15:07.815379', 'Travel', 'Metro', 178.26125745738483)\n",
+      "(68, 68, '2021-01-06 16:15:07.815379', 'Music', 'Netflix', 489.5069570634831)\n",
+      "(69, 69, '2021-05-18 10:15:07.815379', 'Books', 'Amazon', 340.04846422559376)\n",
+      "(70, 70, '2021-05-01 10:15:07.815379', 'Utility', 'Electricity', 249.7879331429329)\n",
+      "(71, 71, '2020-12-25 13:15:07.815379', 'Utility', 'Phone', 359.72736244936607)\n",
+      "(72, 72, '2021-01-11 16:15:07.815379', 'Food', 'Hotel', 467.6109243091568)\n",
+      "(73, 73, '2021-07-21 13:15:07.815379', 'Music', 'Netflix', 259.40122482210757)\n",
+      "(74, 74, '2020-10-28 14:15:07.815379', 'Food', 'Swiggy', 272.16030559915646)\n",
+      "(75, 75, '2021-06-23 14:15:07.815379', 'Travel', 'Metro', 253.53717541817142)\n",
+      "(76, 76, '2021-05-14 14:15:07.815379', 'Utility', 'Phone', 288.20600505758887)\n",
+      "(77, 77, '2021-04-12 13:15:07.815379', 'Music', 'spotify', 134.1256239746048)\n",
+      "(78, 78, '2020-12-30 12:15:07.815379', 'Books', 'Amazon', 459.04531817691054)\n",
+      "(79, 79, '2021-04-01 10:15:07.815379', 'Books', 'Amazon Kindle', 131.23496926686147)\n",
+      "(80, 80, '2020-09-24 07:15:07.815379', 'Books', 'Flipcart', 227.4860890886676)\n",
+      "(81, 81, '2021-02-18 13:15:07.815379', 'Books', 'Flipcart', 113.19434168940123)\n",
+      "(82, 82, '2020-11-06 09:15:07.815379', 'Music', 'Netflix', 272.99318915513084)\n",
+      "(83, 83, '2021-05-27 17:15:07.815379', 'Utility', 'Phone', 244.7405553027889)\n",
+      "(84, 84, '2021-03-12 11:15:07.815379', 'Music', 'Amazon', 426.8521397500627)\n",
+      "(85, 85, '2021-05-03 17:15:07.815379', 'Food', 'Zomato', 223.40166219659463)\n",
+      "(86, 86, '2020-11-20 07:15:07.815379', 'Food', 'Zomato', 445.59840652333975)\n",
+      "(87, 87, '2021-05-03 09:15:07.815379', 'Travel', 'Metro', 416.2565522174256)\n",
+      "(88, 88, '2020-09-21 07:15:07.815379', 'Utility', 'Phone', 367.12341919205045)\n",
+      "(89, 89, '2020-10-12 10:15:07.815379', 'Music', 'Amazon', 430.97086136311583)\n",
+      "(90, 90, '2020-09-29 16:15:07.815379', 'Travel', 'Auto', 318.5102223236555)\n",
+      "(91, 91, '2021-02-18 13:15:07.815379', 'Food', 'Swiggy', 310.1334713304622)\n",
+      "(92, 92, '2021-09-11 09:15:07.815379', 'Food', 'Swiggy', 118.07140423650169)\n",
+      "(93, 93, '2021-06-15 09:15:07.815379', 'Travel', 'Metro', 454.32958303879883)\n",
+      "(94, 94, '2021-07-11 07:15:07.815379', 'Utility', 'Phone', 127.51664067839958)\n",
+      "(95, 95, '2020-12-22 16:15:07.815379', 'Music', 'spotify', 328.9925875329303)\n",
+      "(96, 96, '2020-10-04 12:15:07.815379', 'Travel', 'Metro', 143.9111171402323)\n",
+      "(97, 97, '2020-11-15 10:15:07.815379', 'Books', 'Flipcart', 238.4655708329284)\n",
+      "(98, 98, '2020-12-08 09:15:07.815379', 'Music', 'Netflix', 172.05164190983777)\n",
+      "(99, 99, '2021-07-31 13:15:07.815379', 'Utility', 'Electricity', 345.67126353343826)\n",
       "(0, 0, '2020-12-22 07:15:07.815379', 'Utility', 'Electricity', 418.33547752172433)\n",
       "(1, 1, '2021-08-28 15:15:07.815379', 'Travel', 'Auto', 301.3777497294401)\n",
       "(2, 2, '2021-04-01 17:15:07.815379', 'Books', 'Flipcart', 176.6455631641013)\n",
@@ -275,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +530,7 @@
        "[100 rows x 6 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
